# probatus

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  VISION.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other-issue.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cronjob_unit_tests.yml  publish_to_pypi.yml  unit_tests.yml
api/: feature_elimination.html  model_interpret.html  sample_similarity.html  utils.html
data/: sample_credit_data.pkl
discussion/: contributing.html  nb_rfecv_vs_shaprfecv.html  vision.html
docs/: index.md  rtd_environment.yml  rtd_requirements.txt
docs/api/: feature_elimination.md  features_elimination.md  imputation_selector.md  metric_volatility.md  model_interpret.md  sample_similarity.md  stat_tests.md  utils.md
docs/discussion/: nb_rfecv_vs_shaprfecv.ipynb  vision.md
docs/howto/: grouped_data.ipynb  reproducibility.ipynb
docs/source/: conf.py  contact.rst  examples.rst  index.rst  install.rst  license.rst  modules.rst  nb_binning.ipynb  nb_calibration.ipynb  nb_distribution_statistics.ipynb  nb_metric_uncertainity.ipynb  nb_metric_volatility.ipynb  nb_resemblance_modeling.ipynb  nb_resemblance_modeling.ipynb~master  nb_sample_similarity.ipynb  nb_shap_dependence.ipynb  nb_shap_features_elimination.ipynb  nb_shap_model_analyser.ipynb  nb_shap_model_interpreter.ipynb  nb_unexposed_distribution_statistics.ipynb  probatus.binning.rst  probatus.calibration.rst  probatus.datasets.rst  probatus.interpret.rst  probatus.metric_uncertainty.rst  probatus.metric_volatility.rst  probatus.models.rst  probatus.rst  probatus.sample_similarity.rst  probatus.samples.rst  probatus.stat_tests.rst  probatus.utils.rst
docs/tutorials/: nb_automatic_best_num_features.ipynb  nb_binning.ipynb  nb_custom_scoring.ipynb  nb_distribution_statistics.ipynb  nb_imputation_comparison.ipynb  nb_metric_volatility.ipynb  nb_sample_similarity.ipynb  nb_shap_dependence.ipynb  nb_shap_feature_elimination.ipynb  nb_shap_importance.ipynb  nb_shap_model_analyser.ipynb  nb_shap_model_interpreter.ipynb  nb_shap_variance_penalty_and_results_comparison.ipynb  nb_shap_variance_penalty_and_results_comparrison.ipynb
howto/: grouped_data.html  reproducibility.html
notebooks/: agglo_clustering.ipynb  binning.ipynb  calibration.ipynb  distribution_statistics.ipynb  metric_uncertainty.ipynb  play_psi.ipynb  resemblance_modeling.ipynb  shap_importance.ipynb
old_docs/source/: probatus.datasets.rst  probatus.metric_volatility.rst  probatus.rst
probatus/: __init__.py
probatus/binning/: __init__.py  binning.py
probatus/calibration/: __init__.py  calibrator.py
probatus/datasets/: datasets.py
probatus/feature_elimination/: __init__.py  early_stopping_feature_elimination.py  feature_elimination.py
probatus/features_elimination/: __init__.py  features_elimination.py
probatus/impute/: imputation.py
pyrisk/: __init__.py  datasets.py  load_data.py  models.py  validation.py
search/: search_index.json
tests/: binning.py  conftest.py  mocks.py  requirements_test.txt  test_binning.py  test_calibration.py  test_datasets.py  test_distribution_statistics.py  test_dummy.py  test_inspector.py  test_ks.py  test_metric_uncertainty.py  test_propensity.py  test_psi.py  test_resemblance_model.py  test_samples.py  test_shapley_helpers.py  test_stat_tests.py  test_utils_array_funcs.py  test_validation.py
tutorials/: nb_automatic_best_num_features.html  nb_custom_scoring.html  nb_sample_similarity.html  nb_shap_dependence.html  nb_shap_feature_elimination.html  nb_shap_model_interpreter.html  nb_shap_variance_penalty_and_results_comparison.html
(+111 files in other folders)
